April 21, 2006
  - Add buffersize selector to event source dialogs.
April 23, 2006
  - Fix typos in  event source dialogs buffersize stuff.
  - Add many credits.
April 26, 2006
  - Added screen dump based printing for the A1900 group and the
    KSU folks who want a wysiwyg printing mechanism.
May 23, 2006
  - Fix defect 195,196: gri was emitting epsf which caused multiple pages
    to smoosh onto a single page, printer.cc: Print setup dialog had a
    widget that duplicated the name of another widget causing it to operate
    funny.
SpecTcl-3.1-001
   - Try to make the docbook builds more robust even in the presence of missing
     or broken(?) docbook installs.
   - configure for libgd.
SpecTcl-3.1-002
   - Fix defect 206 : Bit mask gates don't check parameter
     validity and therefore can crash.
   - Fix defect 197 : 2d averaging boxes too large in x.
   - Fix defect 200 : Gamma 1dL spectrum were not 64 bit clean
   - Fix defect 209 : More instances of non 64bit clean longword spectra:
	                BitSpectrumL.cpp
	               	Gamma1DL.cpp
			Spectrum1DL.cpp
			Spectrum2DL.cpp
			SummarySpectrumL.cpp
   - Fix defect 210 : Some acceptance of integer input is not 64 bit clean
                      e.g. sscaning to long but with %d conversion instead of
                      %ld. 
   - Find some more 64 bit uncleanliness.. this time in Xamine.
   - Re-do the GUI to deal with the case where there's an item named a
     and another named a.b  - big rewrite!!!!
   - Fix Defect 211 - did not check parameter count on g1 spectrum creation.
                      if no parameters, spectcl segfaults.
   - Fix Error in allocator.c - mask for longword alignent incorrectly 
     calculated.. caused smaller allocations than should have been done.
     this caused corruption of the Xamine shared memory free list.
   - Improve performance of GUI parenting.
   - Mask gates were not checked in a 64 bit pure way.. sign extends could
     make the check incorrect.